[package]
name = "proj"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
terminal_size = "0.4.2"
glam = "0.30.3"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
