[package]
name = "rview"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
terminal_size = "0.4.2"
glam = "0.30.3"
obj-rs = "0.7.4"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
debug = false
